--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -16,6 +16,22 @@
         <servlet-name>photoGallery</servlet-name>
         <url-pattern>/photoGallery</url-pattern>
     </servlet-mapping>
+    <servlet>
+        <servlet-name>updatePhoto</servlet-name>
+        <servlet-class>servlets.updatePhoto</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>updatePhoto</servlet-name>
+        <url-pattern>/updatePhoto</url-pattern>
+    </servlet-mapping>  
+    <servlet>
+        <servlet-name>updateMessage</servlet-name>
+        <servlet-class>servlets.updateMessage</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>updateMessage</servlet-name>
+        <url-pattern>/updateMessage</url-pattern>
+    </servlet-mapping>
     <session-config>
         <session-timeout>
             30
