--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -8,6 +8,10 @@
         <servlet-name>ImgHandler</servlet-name>
         <servlet-class>servlets.ImgHandler</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>Logout</servlet-name>
+        <servlet-class>servlets.Logout</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>submitphoto</servlet-name>
         <url-pattern>/submitphoto</url-pattern>
@@ -20,7 +24,7 @@
         <servlet-name>photoGallery</servlet-name>
         <url-pattern>/photoGallery</url-pattern>
     </servlet-mapping>
-        <servlet>
+    <servlet>
         <servlet-name>Register</servlet-name>
         <servlet-class>servlets.Register</servlet-class>
     </servlet>
@@ -35,7 +39,7 @@
     <servlet-mapping>
         <servlet-name>updatePhoto</servlet-name>
         <url-pattern>/updatePhoto</url-pattern>
-    </servlet-mapping>  
+    </servlet-mapping>
     <servlet>
         <servlet-name>updateMessage</servlet-name>
         <servlet-class>servlets.updateMessage</servlet-class>
@@ -43,10 +47,14 @@
     <servlet-mapping>
         <servlet-name>updateMessage</servlet-name>
         <url-pattern>/updateMessage</url-pattern>
-    </servlet-mapping>        
+    </servlet-mapping>
     <servlet-mapping>
         <servlet-name>ImgHandler</servlet-name>
         <url-pattern>/ImgHandler</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Logout</servlet-name>
+        <url-pattern>/Logout</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
