--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,5 @@ nbproject/private/private.properties
 nbproject/private/private.xml
 
 nbproject/project.properties
+
+nbproject/private/private.xml
